--- a/package.json
+++ b/package.json
@@ -19,34 +19,37 @@
   },
   "homepage": "https://github.com/jewkub/simpic-web#readme",
   "dependencies": {
-    "@google-cloud/firestore": "^2.2.3",
-    "@google-cloud/storage": "^3.0.2",
+    "@google-cloud/firestore": "^2.2.9",
+    "@google-cloud/storage": "^3.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "cookie-session": "^1.3.3",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
-    "multer": "^1.4.1",
+    "googleapis": "^43.0.0",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.0",
-    "@babel/preset-env": "^7.5.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
     "compression-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.0.0",
+    "css-loader": "^3.2.0",
     "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "popper.js": "^1.15.0",
     "style-loader": "^0.23.1",
-    "sweetalert2": "^8.13.1",
-    "url-loader": "^2.0.1",
-    "webpack": "^4.35.2",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.5"
+    "sweetalert2": "^8.17.0",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.39.3",
+    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-cli": "^3.3.7"
   }
 }
