--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "export": "node exports/exportform.js",
     "deploy": "gcloud app deploy --project=simpic-web"
   },
   "repository": {
